<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".MainActivity"
        android:padding="16dp">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbGenerateQRCode"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_code_qr"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbScanner"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/generate_code_qr"
            app:layout_constraintTop_toBottomOf="@id/mbGenerateQRCode"/>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/mbGetContact"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/get_contact"
            app:layout_constraintTop_toBottomOf="@+id/tvPhone"
            tools:layout_editor_absoluteX="16dp" />

        <TextView
            android:id="@+id/tvPhone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:text="@string/phone_number_result"
            android:textColor="#000000"
            app:layout_constraintEnd_toEndOf="@+id/mbScanner"
            app:layout_constraintStart_toStartOf="@+id/mbScanner"
            app:layout_constraintTop_toBottomOf="@+id/mbScanner" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>